<resources>
    <string name="app_name">Lexis</string>
    <string name="password_label">password</string>
    <string name="username_label">username</string>
    <string name="log_in_label">Log in</string>
    <string name="sign_up_text_label">Don\'t have an account yet? Sign up!</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="name_label">name</string>
    <string name="language_spinner_label">I\'m learning…</string>
    <string name="email_label">e-mail</string>
    <string name="log_out_label">Log out</string>
    <string name="settings_label">Settings</string>
    <string name="profile_label">Profile</string>
    <string name="save_label">Save</string>
    <string name="total_words_studied_label">Total words studied</string>
    <string name="currently_learning_label">Currently learning</string>
    <string name="confirm_password_label">confirm password</string>
    <string name="change_password_label">change password</string>
    <string name="empty_vocabulary_prompt">You haven\'t studied any words yet!\n \nTap on a highlighted word within an article to see its meaning and add it to your vocabulary, or add a word manually by tapping the plus button.</string>
    <string name="answer_in_english_label">🇺🇸 English</string>
    <string name="practice_prompt">How would you like to practice today?</string>
    <string name="start_practice_button_label">Let\'s go!</string>
    <string name="practice_spinner_label">I want to practice…</string>
    <string name="answer_hint">Answer in…</string>
    <string name="starred_words_label">Starred words</string>
    <string name="practice_starred_words_only">Practice starred words only</string>
    <string name="no_search_results">Sorry, no search results found!</string>
    <string name="languages">Languages</string>
    <string name="update_vocabulary_filters">Update vocabulary filters</string>
    <string name="starred_words_only">Starred words only</string>
    <string name="all">All</string>
    <string name="sort_by">Sort by</string>
    <string name="date_added">Date added</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="number_of_flashcards">Number of flashcards</string>
    <string name="back_to_vocabulary">Back to vocabulary</string>
    <string name="practice_end_congratulations">Congratulations on wrapping up your flashcard session! 💪</string>
    <string name="word_search_congratulations">Congratulations, you finished the word puzzle! 🎉\n\nYour time was: %s</string>
    <string name="knew">Knew</string>
    <string name="forgot">Forgot</string>
    <string name="add_new_word_to_vocabulary">Add new word to vocabulary</string>
    <string name="target_language">Target language</string>
    <string name="english_word">English word</string>
    <string name="practice_with">Practice with...</string>
    <string name="flashcards">Flashcards</string>
    <string name="word_search">Word search</string>
    <string name="word_search_puzzle">Word search puzzle</string>
    <string name="best_word_search_time">Best word search time</string>
    <string name="personal_best">You set a new personal best! 🏆</string>
    <string name="language_options">Language options</string>
    <string name="translation_frequency">Translation frequency</string>
    <string name="frequent">Frequent</string>
    <string name="regular">Regular</string>
    <string name="rare">Rare</string>
    <string name="account_settings">Account settings</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="reset_password_instructions">Enter the e-mail associated with your account below and we\'ll send you a link to reset your password!</string>
</resources>