<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vocabulary_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="145dp"
    android:paddingBottom="135dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="@drawable/dialog_background_shape" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/update_vocabulary_filters" />

    <TextView
        android:id="@+id/tvLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_alignStart="@id/tvTitle"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:text="@string/languages" />

    <LinearLayout
        android:id="@+id/languageList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLanguages"
        android:layout_alignStart="@id/tvLanguages"
        android:orientation="vertical" >
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/languageList"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:minHeight="0dp"
        android:text="@string/all"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvStarredWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/languageList"
        android:layout_alignStart="@id/languageList"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:text="@string/starred_words_label" />

    <CheckBox
        android:id="@+id/cbStarredOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvStarredWords"
        android:layout_alignStart="@id/tvStarredWords"
        android:layout_marginEnd="20dp"
        android:minHeight="0dp"
        android:text="@string/starred_words_only"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvSorting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbStarredOnly"
        android:layout_alignStart="@id/cbStarredOnly"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:text="@string/sort_by" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSorting"
        android:layout_alignStart="@id/tvSorting"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radioAlphabetical"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/alphabetically" />
        <RadioButton
            android:id="@+id/radioCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/date_added" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:padding="0dp"
        android:minWidth="0dp"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:background="@android:color/transparent"
        android:text="Cancel" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:padding="0dp"
        android:minWidth="0dp"
        android:textColor="@color/tiffany_blue"
        android:textSize="16sp"
        android:background="@android:color/transparent"
        android:text="Update" />
</RelativeLayout>